src/test/ui/const-generics/defaults/default-const-param-cannot-reference-self.stderr
error[E0735]: generic parameters cannot use `Self` in their defaults
  --> $DIR/default-const-param-cannot-reference-self.rs:3:36
   |
LL | struct Snobound<const N: usize = { Self; 10 }>;
   |                                    ^^^^ `Self` in generic parameter default

error[E0735]: generic parameters cannot use `Self` in their defaults
  --> $DIR/default-const-param-cannot-reference-self.rs:6:34
   |
LL | enum Enobound<const N: usize = { Self; 10 }> { }
   |                                  ^^^^ `Self` in generic parameter default

error[E0735]: generic parameters cannot use `Self` in their defaults
  --> $DIR/default-const-param-cannot-reference-self.rs:9:35
   |
LL | union Unobound<const N: usize = { Self; 10 }> { not_empty: () }
   |                                   ^^^^ `Self` in generic parameter default

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0735`.
